fix overflow x and y issue

--- a/src/App.css
+++ b/src/App.css
@@ -15,13 +15,15 @@
 .main-area {
     max-width: 100%;
     width: 100%;
-    height: 100%;
+    height: 100vw;
     display: flex;
     flex-direction: column;
+    overflow-x: scroll
 }
 
 .content-container {
     display: flex;
     flex-direction: column;
-    flex-grow: 1;
+    box-sizing: border-box;
+    height: 100vh;
 }
