--- a/src/pages/show/cards/Card.css
+++ b/src/pages/show/cards/Card.css
@@ -1,6 +1,7 @@
 .card-container {
-    max-height: 70vh;
+    box-sizing: border-box;
     overflow-x: scroll;
+    height: 100%;
     display: flex;
 }
 
@@ -8,10 +9,13 @@
     margin-right: 1rem;
     padding: 1.5rem;
     border-radius: 0.5rem;
-    height: max-content;
     min-width: 15rem;
+    height: fit-content;
+    max-height: 100%;
     box-sizing: border-box;
     background-color: var(--bg-color);
+    display: flex;
+    flex-direction: column;
 }
 
 .seperation-line-card {
@@ -43,7 +47,7 @@
 
 .subcards-container {
     overflow-y: scroll;
-    max-height: 43vh;
+    flex-grow: 1;
     margin-bottom: 1rem;
 }
 
@@ -51,7 +55,6 @@
     background-color: #fff;
     padding: 0.7rem;
     border-radius: 0.5rem;
-    height: fit-content;
     margin-bottom: 1rem;
     transition: 0.5s ease;
     color: var(--break-color);
@@ -162,8 +165,6 @@ ul {
     align-items: center;
     margin-left: auto;
 }
-
-.comment-container p {}
 
 .comment-icon {
     color: var(--text-color);
